# ft_printf

./: .gitmodules  CMakeLists.txt  Makefile  clean_description.c  ft_printf.c  ft_printf.h  ft_printf_private.h  processing.c  processing_c.c  processing_di.c  processing_ls.c  processing_o.c  processing_p.c  processing_percent.c  processing_s.c  processing_u.c  processing_x.c  read_arguments.c  read_arguments2.c  read_modifiers.c  read_modifiers2.c  useful_things.c  wchar.c
include/: ft_printf.h  libftprintf.h
libft/: Makefile  ft_strsplit.c
